--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "sunwin-api-prime8",
   "version": "1.0.0",
-  "description": "API proxy for Tài Xỉu live results.",
+  "description": "API for Tai Xiu prediction based on historical data.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "taixiu",
     "api",
-    "proxy",
+    "prediction",
     "node.js",
     "render"
   ],
@@ -18,9 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.2",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "express": "^4.19.2",
+    "node-cache": "^5.1.2"
   }
 }
